[package]
name = "smart-speaker"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
axum = "0.8.4"
axum-login = "0.17.0"
enigo = "0.3.0"
hyper = {version = "1.6.0", features = ["full"]}
tokio = {version = "1.44.2", features = ["full"]}
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = {version = "1.16.0", features = ["v4"]}

