[package]
name = "smart-speaker"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
enigo = "0.3.0"
hyper = {version = "1.6.0", features = ["full"]}
mpris = "2.0.1"
tokio = {version = "1.44.2", features = ["full"]}
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = "1.16.0"
zbus = "5.8.0"

